--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -3,6 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bcd4c636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用autodl首次下载模型时需要开启加速\n",
+    "import subprocess\n",
+    "import os\n",
+    "\n",
+    "result = subprocess.run('bash -c \"source /etc/network_turbo && env | grep proxy\"', shell=True, capture_output=True, text=True)\n",
+    "output = result.stdout\n",
+    "for line in output.splitlines():\n",
+    "    if '=' in line:\n",
+    "        var, value = line.split('=', 1)\n",
+    "        os.environ[var] = value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a3acc27d",
    "metadata": {},
    "outputs": [],
