using .pkl instead of .csv

--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -21,20 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a3acc27d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
     "pd.options.mode.copy_on_write = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4280c362",
    "metadata": {},
    "outputs": [],
@@ -56,9 +57,9 @@
     "        'patience': 10,\n",
     "        'grad_clip': 1.0,\n",
     "\n",
-    "        'checkpoint_path': 'checkpoint/',\n",
+    "        'checkpoint_path': '/root/autodl-tmp/checkpoint' if os.path.exists('/root/autodl-tmp') else 'checkpoint/',\n",
     "        'checkpoint_interval': 5,\n",
-    "        'model_save_path': 'model/',\n",
+    "        'model_save_path': '/root/autodl-tmp/model' if os.path.exists('/root/autodl-tmp') else 'model/',\n",
     "    },\n",
     "\n",
     "    'model_config': {\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2a6a0fbb",
    "metadata": {},
    "outputs": [],
@@ -86,15 +87,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a7c1e2e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded ETF data from data/510500_etf.pkl and news data from data/510500_news.pkl.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from data_preprocessor import DataPreprocessor\n",
     "# 准备数据\n",
     "dp = DataPreprocessor(config, tokenizer)\n",
-    "dp.load_data_frame(from_csv=True)"
+    "dp.load_data_frame(from_pkl=True)"
    ]
   },
   {
@@ -105,7 +131,8 @@
    "outputs": [],
    "source": [
     "from etf_dataset import ETFDataset\n",
-    "ds = ETFDataset(dp.etf_df, dp.preprocess_news(), tokenizer, config['sample_sequence_window'], config['model_config']['pred_days'])"
+    "ds = ETFDataset(dp.etf_df, dp.preprocess_news(), tokenizer, config['sample_sequence_window'], config['model_config']['pred_days'])\n",
+    "del dp"
    ]
   },
   {
