--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -21,62 +21,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a3acc27d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
-    "import os\n",
     "\n",
     "pd.options.mode.copy_on_write = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4280c362",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import train\n",
     "# 全局配置参数\n",
-    "config = {\n",
-    "    'device': 'cuda' if torch.cuda.is_available() else 'cpu',\n",
-    "\n",
-    "    'etf_code': '510500',\n",
-    "\n",
-    "    'data_dir': 'data',\n",
-    "    'sample_sequence_window': 90,\n",
-    "    'max_news_per_day': 20,\n",
-    "    'max_news_length': 456,\n",
-    "\n",
-    "    'trainer_config': {\n",
-    "        'batch_size': 32,\n",
-    "        'num_epochs': 100,\n",
-    "        'patience': 10,\n",
-    "        'grad_clip': 1.0,\n",
-    "\n",
-    "        'checkpoint_path': '/root/autodl-tmp/checkpoint' if os.path.exists('/root/autodl-tmp') else 'checkpoint/',\n",
-    "        'checkpoint_interval': 5,\n",
-    "        'model_save_path': '/root/autodl-tmp/model' if os.path.exists('/root/autodl-tmp') else 'model/',\n",
-    "    },\n",
-    "\n",
-    "    'model_config': {\n",
-    "        'news_emb_aggregate_output_size': 256,\n",
-    "        'fusion_hidden': 256,\n",
-    "        'tech_feature_dim': 12,\n",
-    "        'pred_days': 5,\n",
-    "        'gru_hidden': 256,\n",
-    "        \n",
-    "    }\n",
-    "}\n",
+    "config = train.config\n",
     "device = torch.device(config['device'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2a6a0fbb",
    "metadata": {},
    "outputs": [],
@@ -87,35 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a7c1e2e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use cpu\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded ETF data from data/510500_etf.pkl and news data from data/510500_news.pkl.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from data_preprocessor import DataPreprocessor\n",
     "# 准备数据\n",
@@ -179,9 +125,9 @@
     "    input_ids = batch['input_ids'][0].unsqueeze(0).to(trainer.device)\n",
     "    attention_mask = batch['attention_mask'][0].unsqueeze(0).to(trainer.device)\n",
     "    news_weights = batch['news_weights'][0].unsqueeze(0).to(trainer.device)\n",
-    "    \n",
-    "    outputs = trainer.model(tech_data, input_ids, attention_mask, news_weights)\n",
-    "    print(outputs)\n",
+    "    with torch.autocast(device_type=device.type):\n",
+    "        outputs = trainer.model(tech_data, input_ids, attention_mask, news_weights)\n",
+    "        print(outputs)\n",
     "    break"
    ]
   }
