make from_pkl a member of dp

--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -65,8 +65,8 @@
    "source": [
     "from data_preprocessor import DataPreprocessor\n",
     "# 准备数据\n",
-    "dp = DataPreprocessor(config, tokenizer)\n",
-    "dp.load_data_frame(from_pkl=True)"
+    "dp = DataPreprocessor(config, tokenizer, from_pkl=True)\n",
+    "dp.load_data_frame()"
    ]
   },
   {
