--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -121,10 +121,10 @@
    "outputs": [],
    "source": [
     "for batch in trainer.test_loader:\n",
-    "    tech_data = batch['tech_data'][0].unsqueeze(0).to(trainer.device)\n",
-    "    input_ids = batch['input_ids'][0].unsqueeze(0).to(trainer.device)\n",
-    "    attention_mask = batch['attention_mask'][0].unsqueeze(0).to(trainer.device)\n",
-    "    news_weights = batch['news_weights'][0].unsqueeze(0).to(trainer.device)\n",
+    "    tech_data = batch['tech_data'].to(trainer.device)\n",
+    "    input_ids = batch['input_ids'].to(trainer.device)\n",
+    "    attention_mask = batch['attention_mask'].to(trainer.device)\n",
+    "    news_weights = batch['news_weights'].to(trainer.device)\n",
     "    with torch.autocast(device_type=device.type):\n",
     "        outputs = trainer.model(tech_data, input_ids, attention_mask, news_weights)\n",
     "        print(outputs)\n",
