optimize trainer params

--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "from data_preprocessor import DataPreprocessor\n",
     "# 准备数据\n",
-    "dp = DataPreprocessor(config, tokenizer, from_pkl=True)\n",
+    "dp = DataPreprocessor(config, tokenizer, from_pkl=False)\n",
     "dp.load_data_frame()"
    ]
   },
