--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a3acc27d",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4280c362",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2a6a0fbb",
    "metadata": {},
    "outputs": [],
@@ -58,20 +58,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a7c1e2e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WARN] MongoDBManager and sentiment_analyzer not enabled ! So the program won't fetch data from internet.\n",
+      "Loaded ETF data from data/510500_etf.pkl and news data from data/510500_news.pkl.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from data_preprocessor import DataPreprocessor\n",
     "# 准备数据\n",
-    "dp = DataPreprocessor(config, tokenizer, from_pkl=False)\n",
+    "dp = DataPreprocessor(config, tokenizer, from_pkl=True)\n",
     "dp.load_data_frame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9744ca99",
    "metadata": {},
    "outputs": [],
@@ -102,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0b824de8",
    "metadata": {},
    "outputs": [],
@@ -111,6 +130,57 @@
     "# 初始化训练器\n",
     "trainer = Trainer(config, device)\n",
     "trainer.init_dataloader(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "428a5f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.0900,  0.0400,  0.2100, -0.8600,  0.0400],\n",
+      "        [ 0.0400,  0.2100, -0.8600,  0.0400,  0.2100],\n",
+      "        [ 0.2100, -0.8600,  0.0400,  0.2100, -1.4200]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in trainer.test_loader:\n",
+    "    targets = batch['targets']\n",
+    "    print(targets)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8c01af46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.0279,  0.0321,  0.0547, -0.0472,  0.0461],\n",
+      "        [ 0.0107,  0.0343,  0.0934, -0.0402,  0.0301],\n",
+      "        [ 0.0174,  0.0288,  0.0419, -0.0466,  0.0343]],\n",
+      "       grad_fn=<AddmmBackward0>)\n",
+      "tensor(0.0508, grad_fn=<MeanBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fused = torch.rand(3, 30, 256)\n",
+    "gru_out, _ = trainer.model.gru(fused)\n",
+    "last_state = gru_out[:, -1, :]\n",
+    "predicts = trainer.model.prediction_heads(last_state)\n",
+    "print(predicts)\n",
+    "loss = trainer.criterion(predicts, targets)\n",
+    "print(loss)"
    ]
   },
   {
@@ -125,9 +195,8 @@
     "    input_ids = batch['input_ids'].to(trainer.device)\n",
     "    attention_mask = batch['attention_mask'].to(trainer.device)\n",
     "    news_weights = batch['news_weights'].to(trainer.device)\n",
-    "    with torch.autocast(device_type=device.type):\n",
-    "        outputs = trainer.model(tech_data, input_ids, attention_mask, news_weights)\n",
-    "        print(outputs)\n",
+    "    outputs = trainer.model(tech_data, input_ids, attention_mask, news_weights)\n",
+    "    print(outputs)\n",
     "    break"
    ]
   }
