use classification_head

--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -122,7 +122,9 @@
    "source": [
     "for batch in trainer.test_loader:\n",
     "    targets = batch['targets']\n",
+    "    class_labels = trainer._convert_to_class_labels(targets)\n",
     "    print(targets)\n",
+    "    print(class_labels)\n",
     "    break"
    ]
   },
@@ -138,7 +140,7 @@
     "last_state = gru_out[:, -1, :]\n",
     "predicts = trainer.model.prediction_heads(last_state)\n",
     "print(predicts)\n",
-    "loss = trainer.criterion(predicts, targets)\n",
+    "loss = trainer.criterion(predicts, class_labels)\n",
     "print(loss)"
    ]
   },
