--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "for batch in trainer.test_loader:\n",
-    "    targets = batch['targets']\n",
+    "    targets = batch['targets'].to(device)\n",
     "    class_labels = trainer._convert_to_class_labels(targets)\n",
     "    print(targets)\n",
     "    print(class_labels)\n",
@@ -135,10 +135,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fused = torch.rand(3, 30, 256)\n",
+    "fused = torch.rand(3, 30, 256).to(device)\n",
     "gru_out, _ = trainer.model.gru(fused)\n",
     "last_state = gru_out[:, -1, :]\n",
-    "predicts = trainer.model.prediction_heads(last_state)\n",
+    "predicts = trainer.model.classification_head(last_state)\n",
     "print(predicts)\n",
     "loss = trainer.criterion(predicts, class_labels)\n",
     "print(loss)"
